source/objects/WorkforceTeamNotification__c.object
<CustomObject>
    <fields>
        <fullName>APINotificationStatus__c</fullName>
        <label>API Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkforcePlanningTeamNotification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>WorkforcePlanningTeamNotification</relationshipLabel>
        <relationshipName>WorkforcePlanningTeamNotification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Workforce PlanningTeam Notification</label>
    <nameField>
        <displayFormat>WFM-{0000000}</displayFormat>
        <label>WorkforceTeamNotification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkforcePlanningTeamNotification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>